--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 <body>
 
   <main>
-    <section class="heading">
+    <div class="heading">
       <h1> Reliable, efficient delivery<br>
         <span> Powered by Technology </span></h1>
       <p>Our Artificial Intelligence powered tools use millions of project data points 
          to ensure that your project is successful</p>
-    </section>
+      </div>
 
     <!-- Cards Section Start Here -->
     <section class="feature-cards">
