Edited html & improved mobile design

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
   <main>
     <div class="heading">
-      <h1> Reliable, efficient delivery<br>
-        <span> Powered by Technology </span></h1>
+      <h1> Reliable, efficient delivery</h1>
+      <p>Powered by Technology</p> 
       <p>Our Artificial Intelligence powered tools use millions of project data points 
          to ensure that your project is successful</p>
       </div>
